--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.1.2",
-    "body-parser": "^1.19.0",
     "compressing": "^1.5.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -19,9 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2",
     "path": "^0.12.7",
-    "pizzip": "^3.0.6",
-    "pug": "^3.0.0"
+    "pizzip": "^3.0.6"
   }
 }
